<resources>
    <string name="teststring">values-16</string>
    <string name="app_name">Form 8868</string>
    <string name="empty_string"></string>
    <string name="submit">Login</string>
    <string name="_email_address">Email Address</string>
    <string name="_password">Password</string>
    <string name="user_login">User Login</string>
    <string name="userlogin_image">Userlogin image</string>
    <string name="_2014_express990_com">© 2014 Eexpresstaxexempt.com/ \n
        SPAN Enterprises LLC. All rights reserved.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="contactname">Contactname</string>
    <string name="phone">Phone</string>
    <string name="email_username">Email/username</string>
    <string name="todo">TODO</string>
    <string name="are_you_a_tax_professional_paid_preparer_">Are you a Tax Professional (Paid Preparer)?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="signup">SignUp</string>
    <string name="email_address_is_required">*Email Address is required</string>
    <string name="password_is_required">*Password is required</string>
    <string name="exempt_organization_details_">"Exempt Organization Details "</string>
    <string name="_organization_name_">Organization Name</string>
    <string name="doing_business_as_">Doing Business As</string>
    <string name="OtherDBANames">Other DBA Names</string>
    <string name="Other">Other</string>
    <string name="_ein_">"EIN"</string>
    <string name="address_details_">"Address Details "</string>
    <string name="is_the_address_outside_us_">\u0020Is the address outside US?</string>
    <string name="_address_1_">Address Line 1</string>
    <string name="_city_">*City:</string>
    <string name="_state_or_province_">State or Province</string>
    <string name="_zip_code_">*ZIP Code</string>
    <string name="_email_address_">*Email Address</string>
    <string name="website_address_">Website Address</string>
    <string name="_phone_number_">Phone Number</string>
    <string name="principal_officers_details_">"Principal Officers Details "</string>
    <string name="_principal_officer_name_">Principal Officer Name</string>
    <string name="is_this_address_same_as_your_business_address_">"Is this address same as your business address? "</string>
    <string name="_address_2_">Address Line 2</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="emailaddresscolor"> Html.fromHtml("RGB colors are <font color="#FF0000">RED</font>, <font color="#00FF00">GREEN</font> and <font color="#0000FF">BLUE</font>")</string>
    <string name="Forget_your_password"><u>Forgot your password?</u></string>
    <string name="new_user">New User</string>
    <string name="_contact_name">Contact Name</string>
    <string name="_how_did_you_find_us_">*How you find us?</string>
    <string name="_confirm_email_address">*Confirm Email Address</string>
    <string name="_confirm_password">*Confirm Password</string>
    <string name="_phone">*Phone:</string>
    <string name="tax_professional_paid_preparer_">Tax Professional (Paid Preparer)</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="_2014_express990_com_span_enterprises_llc_all_rights_reserved">© 2014 Expresstaxexempt.com, SPAN Enterprises LLC. All rights reserved</string>
    <string name="in_progress">In Progress</string>
    <string name="_confirm_ein_">Confirm EIN</string>
    <string name="_business_name_">Organization Name</string>
    <string name="_form_of_organization_">Form of Organization</string>
    <string name="_address_line1_">Address Line 1</string>
    <string name="address_line2_">Address Line 2</string>
    <string name="_state_">State</string>
    <string name="_country_">Country</string>
    <string name="_phone_">Phone</string>
    <string name="website_address">Website Address</string>
    <string name="_email">Email</string>
    <string name="is_this_address_the_same_as_your_bussiness_address_">Is this address the same as your organization address?</string>
    <string name="_address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="_city">City</string>
    <string name="_state">State</string>
    <string name="_zip_code">ZIP Code</string>
    <string name="create_exempt_organization">Create Exempt Organization</string>
    <string name="principal_officer_details">Principal Officer Details</string>
    <string name="exempt_organization_details">Exempt Organization Details</string>
    <string name="business_details">Business Details</string>
    <string name="forget_password_"><u>Forgot Password?</u></string>
    <string name="send">Send</string>
    <string name="balancedue"><u>BALANCE DUE</u></string>
    <string name="irspay"><u>IRS PAYMENT</u></string>
    <string name="cancel">Cancel</string>
    <string name="congratulations">Your return is on its way to the IRS.Once the IRS processes the return, we will notify you using the email address on our file </string>
    <string name="edit">Edit</string>
    <string name="summarytxt"><b>Summary of your Form 7004</b></string>
    <string name="congratulations1">Although, we expect that the IRS will complete the processing of your return within an hour, please note that there could be a delay due to the volume of returns filled with IRS.</string>
    <string name="delete">Delete</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="hide"><u>Hide</u></string>
    <string name="this_is_a_period_of_12_consecutive_months_beginning_january_1_and_ending_december_31">This is a period of 12 consecutive months beginning January 1 and ending December 31</string>
    <string name="time_zone">*Time Zone:</string>
    <string name="e_postcard_choose_tax_year_amp_eligibility">e-Postcard - Choose Tax Year &amp; Eligibility</string>
    <string name="sign_in">SIGN IN</string>
    <string name="tax_year_eligibility">Tax Year Eligibility</string>
    <string name="_firm_name_">"*Firm Name "</string>
    <string name="_first_name_">"*First Name "</string>
    <string name="_last_name_">"*Last Name "</string>
    <string name="_ptin_">"*PTIN "</string>
    <string name="_address_line_1_">*Address Line 1</string>
    <string name="address_line_2_">Address Line 2</string>
    <string name="fax_number_">Fax Number</string>
    <string name="_time_zone_">*Time Zone</string>
    <string name="save">Update</string>
    <string name="dashboard">DashBoard</string>
    <string name="support">Support</string>
    <string name="log_off">Log Off</string>
    <string name="here"><u>here.</u></string>
    <string name="prioryearpindetails">*Prior Year(2000) Adjusted Gross Income(AGI) $</string>
    <string name="prioryearpindetailsmobile">Prior Year(2000) Adjusted Gross Income(AGI) $</string>
    <string name="AuditSuccess">No errors were found in your tax return. \n
Click Next to proceed to electronically send the return to the IRS.</string>
    <string name="AuditCautionSuccess">No caution were found in your tax return.</string>
    <string name="message">You have not added any Organization yet. \n Please click Add New Organization button on the bottom-left of the Organization List Menu to add a new Organization.</string>
    <string name="PrimaryTaxpayerInformation">Primary Taxpayer Information</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="montharray">
        <item>January (01)</item>
        <item>February (02)</item>
        <item>March (03)</item>
        <item>April (04)</item>
        <item>May (05)</item>
        <item>June (06)</item>
        <item>July (07)</item>
        <item>August (08)</item>
        <item>September (09)</item>
        <item>October (10)</item>
        <item>November (11)</item>
        <item>December (12)</item>
    </string-array>
    <string-array name="suffixarray">
        <item>Select Suffix</item>
        <item>Jr</item>
        <item>Sr</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
    </string-array>
    <string name="tax_year_other_details">Tax Year and other details:</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="create">Create</string>
    <string name="are_available_in_web_version_">filing are available in web version www.expresstaxexempt.com/ for 990-N (e-Postcard)</string>
    <string name="_existing_users">" EXISTING USER"</string>
    <string name="allrights">ExpressTaxExempt.com, SPAN Enterprises LLC. All rights reserved \n &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;202 E Main St, Rock Hill, SC 29730.</string>
    <string name="transmit_return_to_the_irs">Transmit Return to the IRS</string>
    <string name="form_990_n_e_postcard_">Form 990-N (e-Postcard)</string>
    <string name="_9_am_to_9_pm_est_monday_friday_9_am_to_9_pm_est_monday_friday">"9 AM to 6 PM EST Monday - Friday"</string>
    <string name="Holding"><u>Holding Companies</u></string>
    <string name="SpouseInformation"><u>Spouse Information</u> </string>
    <string name="OtherDetails"><u>Other Details</u> </string>
    <string name="mailingaddressinfo">Mailing Address Information:</string>
    <string-array name="noeinreasonarray">
        <item>None</item>
        <item>Pending</item>
        <item>Applied For</item>
    </string-array>
    <string-array name="cardtypearray">
        <item>Visa</item>
        <item>Master Card</item>
        <item>Discover</item>
        <item>American Express</item>
    </string-array>
    <string name="Error_Message">Error Message</string>
    <string name="Caution_Messages">Caution Messages</string>
    <string name="Error_Code">Error Code</string>
    <string name="Action">Action</string>
    <string name="Whole_No_Error">No errors were found in your tax return.</string>
    <string name="Whole_No_Error1">Click <b>Next</b> to proceed to electronically send the return to the IRS.</string>
    <string name="Disclaimer"><b>Disclaimer:</b></string>
    <string name="Disclaimer_Text"><b>Please Note: The integrated Tax Audit verifies that all required fields have been completed. Successfully passing this audit does not guarantee acceptance by the IRS. The IRS is the sole entity able to authorize the acceptance and verify the accuracy of the information entered on your return.</b></string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="supprot_hint">\u0020\u0020\u0020"Let&apos;s face it, no one likes this tax stuff, it can be confusing and time consuming. Our excellent customer support is nothing short of heroic! If you need assistance feel free to email or call us. We&apos;ll help you through the process and put your mind at ease.  "</string>
    <string name="support_email">support@expresstaxexempt.com</string>
    <string name="support_phone">704.839.2321</string>
    <string name="Support_Timings">Support Timings</string>
    <string name="email_us_at">Email us at\u0020\u0020: </string>
    <string name="Give_us_call_at">Give us a call at\u0020\u0020: </string>
    <string name="Phone_Support">Phone Support\u0020\u0020: </string>
    <string name="Email_Support">Email Support\u0020\u0020: </string>
</resources>