<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/Border"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            style="@style/Border2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="35.0dip"
                android:background="@color/Common_Titile_Bg"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/suffixtextview"
                    style="@style/HeaderTextStyle"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/support" />

                <ImageView
                    android:id="@+id/closbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/closeicon"
                    android:visibility="visible" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/noeinfororganizationtextview"
                        style="@style/ValueTextView"
                        android:layout_margin="20.0dip"

                        android:text="@string/supprot_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5.0dip"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20.0dip">

                        <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/textView2"
                                style="@style/SubHeaderTextStyle"
                                android:gravity="left"
                                android:text="@string/_email" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5.0dip">

                            <TextView
                                android:id="@+id/textView3"
                                style="@style/LabelTextView"
                                android:layout_marginLeft="10dp"
                                android:text="@string/email_us_at" />

                            <TextView
                                android:id="@+id/emailsupport"
                                style="@style/ValueTextView"
                                android:text="@string/support_email" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20.0dip">

                            <TextView
                                android:id="@+id/textView4123"
                                style="@style/SubHeaderTextStyle"
                                android:gravity="left"
                                android:text="@string/phone" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5.0dip">

                            <TextView
                                android:id="@+id/textView5"
                                style="@style/LabelTextView"
                                android:layout_marginLeft="10dp"
                                android:text="@string/Give_us_call_at" />

                            <TextView
                                android:id="@+id/phonenumber"
                                style="@style/ValueTextView"
                                android:text="@string/support_phone"
                                android:textColor="@color/Black" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20.0dip">

                            <TextView
                                android:id="@+id/textView7"
                                style="@style/SubHeaderTextStyle"
                                android:gravity="left"
                                android:text="@string/Support_Timings" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5.0dip">

                            <TextView
                                android:id="@+id/textView8"
                                style="@style/LabelTextView"
                                android:layout_marginLeft="10dp"
                                android:text="@string/Phone_Support" />

                            <TextView
                                android:id="@+id/phonetime"
                                style="@style/ValueTextView"
                                android:text="@string/_9_am_to_9_pm_est_monday_friday_9_am_to_9_pm_est_monday_friday"
                                android:textColor="@color/Black" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10.0dip">

                            <TextView
                                android:id="@+id/textView10"
                                style="@style/LabelTextView"
                                android:layout_marginLeft="10dp"
                                android:text="@string/Email_Support" />

                            <TextView
                                android:id="@+id/emailtime"
                                style="@style/ValueTextView"
                                android:text="24 X 7 (Except major holidays)" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>